Update report (ignore files in impl, analysis, and secondary req)

--- a/design-docs/Report Bibliography.bib
+++ b/design-docs/Report Bibliography.bib
@@ -121,3 +121,10 @@
   date={2018},
   url={https://www.jetbrains.com/help/idea/refactoring-source-code.html}
 }
+
+@online{gitscmgitignore,
+  author={Chacon, Scott and Long, Jason},
+  title={Git - gitignore Documentation},
+  date={2018},
+  url={https://git-scm.com/docs/gitignore}
+}
