Update report (misc)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -500,7 +500,7 @@ This may have an issue where it does not fully support ignore files.
 \subsubsection{Plugins}
 To create a plugin for csar the following must be done:
 \begin{itemize}
-  \item Create a new project targetting the JVM which depends on: `csar-api'.
+  \item Create a new project targeting the JVM which depends on: `csar-api'.
   \item Create a class which implements `CsarPlugin' from `csar-api'.
   This must have a public 0-arguments constructor, and must implement the behaviour defined by the interface: parsing, post-processing, searching, and refactoring.
   Your implementation should support adding and removing error listeners as specified by the interface, and delegating the appropriate errors to them.
@@ -754,7 +754,7 @@ It thoroughly tested my resolve, discipline, time management, and programming ab
 
 This was the first time I used Gradle, and deployed a build tool in a multi-module project.
 It was also the first time I used the ANTLR, JCommander, and Mockito libraries.
-It was also the first time I wrote a language grammar from scratch (csar query).
+It was also the first time I used TeX, and wrote a language grammar from scratch (csar query).
 
 It contributed greatly to my understanding of multi-threading, Subversion/Mercurial, Java 8 lambdas, Java 8 syntax intricacies, and the Java ServiceLoader (for the plugin system).
 
