Update report (fix mistake in appendix 1)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -1013,12 +1013,12 @@ Repository: \href{https://github.com/cbeust/jcommander}{cbeust/JCommander}
 \label{apx:SkeletonCsarPluginImplementation}
 
 \begin{lstlisting}[language=Java]
-package org.qmul.csar.CsarJavaPlugin;
+package org.qmul.csar;
 
 // imports...
 
 /**
-  * The Java language csar plugin.
+  * A Java language csar plugin.
   */
 public class CsarJavaPlugin implements CsarPlugin {
 
